@@ -149,6 +149,7 @@ $this->countries = array(
   "MD" => "Moldova, Republic Of",
   "MC" => "Monaco",
   "MN" => "Mongolia",
+	"ME" => "Montenegro",
   "MS" => "Montserrat",
   "MA" => "Morocco",
   "MZ" => "Mozambique",
@@ -192,6 +193,7 @@ $this->countries = array(
   "ST" => "Sao Tome And Principe",
   "SA" => "Saudi Arabia",
   "SN" => "Senegal",
+	"RS" => "Serbia",
   "SC" => "Seychelles",
   "SL" => "Sierra Leone",
   "SG" => "Singapore",
